fix Background and foreground colors do not have a sufficient contrast ratio.

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -35,5 +21,5 @@ h3 {
   @apply text-3xl font-bold;
 }
 * {
-  @apply text-base text-white;
+  @apply bg-gray-900 text-base text-white;
 }
